re PR target/35662 (gfortran interfaces badly with glibc sincosf() causing breakage)

PR target/35662
	* f95-lang.c (gfc_init_builtin_functions): Make sure
	BUILT_IN_SINCOS{,F,L} types aren't varargs.

	* gfortran.dg/pr35662.f90: New test.

From-SVN: r134349